# medidor_de_metricas

./: Cargo.toml
data/: historial.csv
reporte/: resumen_20250408_125214.txt  resumen_20250408_125418.txt
scripts/: generar_reporte.py
src/: main.rs
src/Functions/: CPU_memory.rs  cpu.rs  guardar.rs  memoria.rs  mod.rs  procesos.rs
