[package]
name = "visualizador_metricas"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29"
serde_json = "1.0"
csv = "1.1"
plotters = "0.3"
chrono = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
windows-service = "0.5"
windows = { version = "0.52", features = ["Win32_System_Com", "Win32_System_Wmi"] }
winapi = { version = "0.3", features = ["iphlpapi", "iptypes", "ifdef", "winerror"] }
